overflow text error fixed

--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@ h3 {
     height: 40px;
     margin: 5px auto;
     text-align: left;
+    overflow: hidden;
+    line-break: auto;
 }
 
 #container ul li label {
@@ -150,4 +152,11 @@ h3 {
 .visual {
     opacity: 1 !important;
     border-radius: 10px;
+}
+
+@media screen and (max-width: 400px) {
+    body {
+        font-family: 'Merriweather', serif;
+        background-color: #34495e;
+    }
 }
